--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,6 +12,7 @@ html {
 
 body {
   font-family: "Jost", sans-serif;
+  height: 2000px;
 }
 
 ul {
@@ -84,4 +85,90 @@ a {
   color: #2c2c2c;
   z-index: 10001;
   cursor: pointer;
+}
+
+/* 메인 */
+/* 섹션1 */
+section {
+  padding: 5% 10%;
+}
+
+.main-home {
+  width: 100%;
+  height: 100vh;
+  background-image: url(../images/banner-3.png);
+  background-position: center;
+  background-size: cover;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  align-items: center;
+}
+
+.main-text .sub-title {
+  color: #ee1c47;
+  font-size: 16px;
+  text-transform: capitalize;
+  font-weight: 500;
+}
+
+.main-text h2 {
+  color: #000;
+  font-size: 65px;
+  text-transform: capitalize;
+  line-height: 1.1;
+  font-weight: 600;
+  margin: 6px 0 10px;
+}
+
+.main-text p {
+  color: #333c56;
+  font-size: 20px;
+  font-style: italic;
+  margin-bottom: 20px;
+}
+
+.main-btn {
+  display: inline-block;
+  color: #111;
+  font-size: 16px;
+  font-weight: 500;
+  text-transform: capitalize;
+  border: 2px solid #111;
+  padding: 12px 25px;
+  transition: all 0.42s ease;
+}
+
+.main-btn:hover {
+  background-color: #000;
+  color: #fff;
+}
+
+.main-btn i {
+  vertical-align: middle;
+}
+
+.down-arrow {
+  position: absolute;
+  top: 85%;
+  right: 11%;
+}
+
+.down i {
+  font-size: 30px;
+  color: #2c2c2c;
+  border: 2px solid #2c2c2c;
+  border-radius: 50px;
+  padding: 12px 12px;
+}
+
+.down i:hover {
+  background-color: #2c2c2c;
+  color: #fff;
+  transition: all 0.42s ease;
+}
+
+header.sticky {
+  background: #fff;
+  padding: 20px 10%;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
