--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -160,3 +160,67 @@ header.sticky {
   padding: 20px 10%;
   box-shadow: 0px 0px 10px rgb(0 0 0 / 10%);
 }
+
+/* 섹션2 */
+.center-text h2 {
+  color: #111;
+  font-size: 28px;
+  text-transform: capitalize;
+  text-align: center;
+  margin-bottom: 30px;
+}
+.center-text span {
+  color: #ee1c47;
+}
+.products {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, auto));
+  gap: 2rem;
+}
+.row {
+  position: relative;
+  transition: all 0.4s;
+}
+.row img {
+  width: 100%;
+  height: auto;
+  transition: all 0.4s;
+}
+.row img:hover {
+  transform: scale(0.9);
+}
+.product-text p {
+  position: absolute;
+  top: 13px;
+  left: 13px;
+  color: #fff;
+  font-size: 12px;
+  font-weight: 500;
+  text-transform: uppercase;
+  background-color: #27b737;
+  padding: 3px 10px;
+  border-radius: 2px;
+}
+.heart-icon {
+  position: absolute;
+  right: 0;
+  font-size: 20px;
+}
+.heart-icon:hover {
+  color: #ee1c47;
+}
+.ratting i {
+  color: #ff8c00;
+  font-size: 18px;
+}
+.price h3 {
+  color: #111;
+  font-size: 16px;
+  text-transform: capitalize;
+  font-weight: 400;
+}
+.price p {
+  color: #151515;
+  font-size: 14px;
+  font-weight: 600;
+}
