--- a/CSS/style.css
+++ b/CSS/style.css
@@ -247,3 +247,93 @@ header.sticky {
   font-size: 14px;
   font-weight: 600;
 }
+
+/* 섹션3 */
+.client-reviews {
+  background-color: #f3f4f6;
+}
+
+.reviews {
+  text-align: center;
+}
+
+.reviews h2 {
+  color: #111;
+  font-size: 25px;
+  text-transform: capitalize;
+  text-align: center;
+  font-weight: 700;
+}
+
+.reviews img {
+  width: 100px;
+  height: auto;
+  border-radius: 50px;
+  margin: 10px 0;
+}
+
+.reviews p {
+  color: #707070;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 25px;
+  margin-bottom: 10px;
+}
+
+.reviews h3 {
+  font-size: 22px;
+  color: #000;
+  font-weight: 400;
+  text-transform: capitalize;
+  margin-bottom: 2px;
+}
+
+/* 섹션4 */
+.up-center-text h2 {
+  text-align: center;
+  color: #111;
+  font-size: 25px;
+  text-transform: capitalize;
+  font-weight: 700;
+  margin-bottom: 30px;
+}
+
+.cart img {
+  width: 380px;
+  height: auto;
+  border-radius: 5px;
+}
+
+.update-cart {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(380px, auto));
+  gap: 1rem;
+}
+
+.cart .cart__time {
+  display: block;
+  color: #636872;
+  font-size: 14px;
+  text-transform: capitalize;
+  font-weight: 500;
+}
+
+.cart h3 {
+  color: #111;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.cart p {
+  color: #707070;
+  font-size: 15px;
+  max-width: 380px;
+  line-height: 25px;
+  margin-bottom: 12px;
+}
+
+.cart .more-button {
+  color: #151515;
+  font-size: 14px;
+  font-weight: 500;
+}
