--- a/CSS/style.css
+++ b/CSS/style.css
@@ -89,7 +89,8 @@ a {
 
 /* 메인 */
 /* 섹션1 */
-section {
+section,
+footer {
   padding: 5% 10%;
 }
 
@@ -336,4 +337,64 @@ header.sticky {
   color: #151515;
   font-size: 14px;
   font-weight: 500;
+}
+
+/* 푸터 */
+.footer {
+  background-color: #f3f4f6;
+}
+
+.footer-info {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(160px, auto));
+  gap: 3rem;
+}
+
+.first-info img {
+  width: 140px;
+  height: auto;
+}
+
+.footer-info h4 {
+  color: #212529;
+  font-size: 14px;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+
+.footer-info p {
+  color: #565656;
+  font-size: 14px;
+  font-weight: 400;
+  text-transform: capitalize;
+  line-height: 1.5;
+  margin-bottom: 10px;
+  cursor: pointer;
+  transition: all 0.42s;
+}
+
+.footer-info p:hover {
+  color: #ee1c47;
+}
+
+.social-icon i {
+  color: #565656;
+  margin-right: 10px;
+  font-size: 20px;
+  transition: all 0.42s;
+}
+
+.social-icon i:hover {
+  transform: scale(1.3);
+}
+
+.end-text {
+  background-color: #edfff1;
+  text-align: center;
+  padding: 20px;
+}
+
+.end-text p {
+  color: #111;
+  text-transform: capitalize;
 }
